second mobile stable view, darknot yet fixed

--- a/about.html
+++ b/about.html
@@ -65,30 +65,27 @@
                 <img id="main-logo" src="assets/img/Favicon.png" width="65" height="40" alt="">
               </a>
 
-            <div id="myNav" class="overlay">
-
+              <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-
                 <!--nightmode toggle icon in mobile-->
-                <button class="btn text-right text-white" type="button" style="margin-right: 5px;">
+                <button id="night-toggle-mob" class="btn text-right text-white d-lg-none" type="button" onclick="retflag()">
                     <i onclick="aboutFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
                 </button>
-
-                <!--overlay content in mobile start-->
-                <div class="overlay-content d-flex justify-content-start" style="padding-left:15px;" id="navbarToggler">
+                <!--overlay content start-->
+                <div class="overlay-content d-flex justify-content-start" style="padding-left:25px;" id="navbarToggler">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="mob-nav nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item mob-menu">
-                        <a class="mob-nav nav-link active" href="about.html">About Us</a>
+                        <a class="mob-nav nav-link active" href="about.html">About Us +</a>
                     </li>
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="contact.html">Contact</a>
+                        <a class="mob-nav nav-link active" href="contact.html">Contact +</a>
                     </li>
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="blog.html">Blog</a>
+                        <a class="mob-nav nav-link active" href="blog.html">Blog +</a>
                     </li>
                     </ul>
                 </div>
@@ -177,7 +174,7 @@
             <div class="container">
                 <div class="row">
                     <h1 class="text-center pt-5 mb-5 big-hire">Our core values</h1>
-                    <div class="col-lg-4">
+                    <div class="col-sm-12 col-lg-4">
                         <div class="border bg-white rounded-circle img-card"><img src="assets/img/people.svg" alt="" width="70" height="70" class=""></div>
                         <h3 class="text-center py-3">User centric</h3>
                         <p>We’re not obsessed about our clients, we’re obsessed about our client’s clients. 
