--- a/contact.html
+++ b/contact.html
@@ -65,29 +65,26 @@
               </a>
 
             <div id="myNav" class="overlay">
-
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-
                 <!--nightmode toggle icon in mobile-->
-                <button class="btn text-right text-white" type="button" style="margin-right: 5px;">
-                    <i onclick="aboutFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
+                <button id="night-toggle-mob" class="btn text-right text-white d-lg-none" type="button" onclick="retflag()">
+                    <i onclick="contactFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
                 </button>
-
-                <!--overlay content in mobile start-->
-                <div class="overlay-content d-flex justify-content-start" style="padding-left:15px;" id="navbarToggler">
+                <!--overlay content start-->
+                <div class="overlay-content d-flex justify-content-start" style="padding-left:25px;" id="navbarToggler">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="mob-nav nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item mob-menu">
-                        <a class="mob-nav nav-link active" href="about.html">About Us</a>
+                        <a class="mob-nav nav-link active" href="about.html">About Us +</a>
                     </li>
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="contact.html">Contact</a>
+                        <a class="mob-nav nav-link active" href="contact.html">Contact +</a>
                     </li>
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="blog.html">Blog</a>
+                        <a class="mob-nav nav-link active" href="blog.html">Blog +</a>
                     </li>
                     </ul>
                 </div>
@@ -132,7 +129,7 @@
             <div class="container my-5">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1 class="text-left pt-5 mb-3 big-hire" style="margin-top:5rem;">Contact Us</h1>
+                        <h1 class="text-left pt-5 mb-3 big-hire">Contact Us</h1>
                         <span class="strong"><strong>Let's create something awesome together</strong></span>
                     </div>
                     <div class="col-lg-6 mt-5 pt-5">
@@ -194,7 +191,7 @@
                           </form>
                     </div>
                     <div class="col-lg-6 pt-3" data-aos="fade-down">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497699.9974145158!2d77.35073152304378!3d12.953847712013593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1608404928594!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497699.9974145158!2d77.35073152304378!3d12.953847712013593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1608404928594!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
