aligned logo to left in mobile view

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 mx-auto">
-                    <p class="text-faded mb-5">We can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                    <p class="text-faded mb-5">We can help you build better websites using the Bootstrap CSS framework! Just start going, no strings attached!</p>
                     <button class="btn btn-primary text-white rounded-pill mx-auto" type="button">
                         <a class="btn btn-primary js-scroll-trigger" role="button" href="#services">Get a quote</a>
                     </button>
