added mobile logo

--- a/index.html
+++ b/index.html
@@ -69,30 +69,37 @@
             </div>
             
             <!-- action menu on mobile -->
-            <!-- <div id="subNav" class="action-overlay"> -->
-                <!--button to close navigation overlay-->
-                <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeSubNav()">&times;</a> -->
+            <div id="subNav" class="action-overlay">
+                <!-- button to close navigation overlay -->
+                <a href="javascript:void(0)" class="closebtn" onclick="closeSubNav()">&times;</a>
                 <!--overlay content start-->
-                <!-- <div class="action-overlay-content d-flex justify-content-start" style="padding-left:25px;" id="navbarToggler"> -->
-                    <!-- <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="index.html">Home</a>
+                <div class="action-overlay-content justify-content-start" style="padding-left:25px;" id="navbarToggler">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item" style="margin-top: 10px;">
+                        <img style=" margin-top:15px;" src="assets/img/pen-icon.svg" alt="" width="24" height="24">
+                        <p style="display: inline; padding-left:20px;">Have a project overview?</p>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="index.html">Submit a form</a>
                     </li>
                     <li class="nav-item mob-menu">
-                        <a class="mob-nav nav-link active" href="about.html">About Us +</a>
+                        <img style=" margin-top:13px;" src="assets/img/email-icon.svg" alt="" width="24" height="24">
+                        <p style="display: inline; padding-left:20px;">Share detailed specification</p>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="about.html">updot@gmail.com</a>
                     </li>
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="contact.html">Contact +</a>
+                        <img style=" margin-top:12px;" src="assets/img/call-icon.svg" alt="" width="24" height="24">
+                        <p style="display: inline; padding-left:20px;">Begin a quick discussion?</p>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Chat with our executive</a>
                     </li>
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="blog.html">Blog +</a>
+                        <img style=" margin-top:10px;" src="assets/img/chat-icon.svg" alt="" width="24" height="24">
+                        <p style="display: inline; padding-left:20px;">Wanna join us</p>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="blog.html">Apply here</a>
                     </li>
                     </ul>
                 </div>
-            </div> -->
-
-
-
+            </div>
+            <!-- action mobile ends -->
+            
             <!--normal navbar for large and extra large devices-->
             <div id="desk-display" class="collapse navbar-collapse d-x-flex justify-content-end">
                 <ul class="navbar-nav mt-2 mt-lg-0">
@@ -425,22 +432,22 @@
                                 <div class="col-lg-8">
                                     <ul class="footer-links">
                                         <li class="footer-item py-2">
-                                            <a class="footer-link" href="about.html">About Us</a>
+                                            <a class="footer-link dark" href="about.html">About Us</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link" href="about.html">Careers</a>
+                                            <a class="footer-link dark" href="about.html">Careers</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link" href="blog.html">Blog</a>
+                                            <a class="footer-link dark" href="blog.html">Blog</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link" href="blog.html">Privacy Policy</a>
+                                            <a class="footer-link dark" href="blog.html">Privacy Policy</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link" href="blog.html">Terms and Conditions</a>
+                                            <a class="footer-link dark" href="blog.html">Terms and Conditions</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link" href="blog.html">Contact</a>
+                                            <a class="footer-link dark" href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
