--- a/blog.html
+++ b/blog.html
@@ -91,6 +91,38 @@
                 </div>
             </div>
 
+            <!-- action menu on mobile -->
+            <div id="subNav" class="action-overlay">
+                <!-- button to close navigation overlay -->
+                <a href="javascript:void(0)" class="closebtn" onclick="closeSubNav()">&times;</a>
+                <!--overlay content start-->
+                <div class="action-overlay-content justify-content-start" style="padding-left:25px;" id="navbarToggler">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item" style="margin-top: 10px;">
+                        <img style=" margin-top:15px;" src="assets/img/pen-icon.svg" alt="" width="24" height="24">
+                        <p style="display: inline; padding-left:20px;">Have a project overview?</p>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="index.html">Submit a form</a>
+                    </li>
+                    <li class="nav-item mob-menu">
+                        <img style=" margin-top:13px;" src="assets/img/email-icon.svg" alt="" width="24" height="24">
+                        <p style="display: inline; padding-left:20px;">Share detailed specification</p>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="about.html">updot@gmail.com</a>
+                    </li>
+                    <li class="nav-item">
+                        <img style=" margin-top:12px;" src="assets/img/call-icon.svg" alt="" width="24" height="24">
+                        <p style="display: inline; padding-left:20px;">Begin a quick discussion?</p>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Chat with our executive</a>
+                    </li>
+                    <li class="nav-item">
+                        <img style=" margin-top:10px;" src="assets/img/chat-icon.svg" alt="" width="24" height="24">
+                        <p style="display: inline; padding-left:20px;">Wanna join us</p>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="blog.html">Apply here</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- action mobile ends -->
+
             <!--normal navbar for desktop-->
             <div id="desk-display" class="collapse navbar-collapse d-x-flex justify-content-end">
                 <ul class="navbar-nav mt-2 mt-lg-0">
@@ -120,7 +152,7 @@
             </div>
             <!--telegram icon on mobile display-->
             <button class="btn d-md-none" type="button" style="background:transparent;">
-                <img src='assets/img/Icon.png' onclick="openSubNav()" alt="" width="25" height="20">
+                <img src='assets/img/Icon.png' onclick="openSubNav()" alt="" width="35" height="30">
             </button>
         </nav>
         <!--blog-->
