--- a/index.html
+++ b/index.html
@@ -432,22 +432,22 @@
                                 <div class="col-lg-8">
                                     <ul class="footer-links">
                                         <li class="footer-item py-2">
-                                            <a class="footer-link dark" href="about.html">About Us</a>
+                                            <a id="fl-a" class="footer-link dark" href="about.html">About Us</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link dark" href="about.html">Careers</a>
+                                            <a id="fl-b" class="footer-link dark" href="about.html">Careers</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link dark" href="blog.html">Blog</a>
+                                            <a id="fl-c" class="footer-link dark" href="blog.html">Blog</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link dark" href="blog.html">Privacy Policy</a>
+                                            <a id="fl-d" class="footer-link dark" href="blog.html">Privacy Policy</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link dark" href="blog.html">Terms and Conditions</a>
+                                            <a id="fl-e" class="footer-link dark" href="blog.html">Terms and Conditions</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link dark" href="contact.html">Contact</a>
+                                            <a id="fl-f" class="footer-link dark" href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
