--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     </head>
     <body>
         <!-- main navbar -->
-        <nav id="mainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
+        <nav id="mainNav" style="background:#37474F;" class="navbar navbar-expand-lg navbar-light fixed-top">
 
             <!-- hamburger on mobile view -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -384,7 +384,7 @@
         </section>
         <!--footer ends-->
         
-        <script>
+        <!-- <script>
             
             $(document).ready(function(){
             $(window).scroll(function(){
@@ -413,7 +413,7 @@
                 }
             })
             })
-        </script>
+        </script> -->
 
     </body>
 </html>
