--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img id="main-logo" src="assets/img/Main Logo.png" width="70" height="40" alt="">
+                <img id="main-logo" src="assets/img/New logo.png" width="100" height="40" alt="">
               </a>
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
@@ -507,7 +507,7 @@
                 }
                 else{
                     document.getElementById('night-toggle').style.backgroundColor='transparent';
-                    $("#main-logo").attr("src", "assets/img/Main Logo.png");
+                    $("#main-logo").attr("src", "assets/img/New logo.png");
                     $("#mainNav").css("background" , "transparent");
                     $(".navbar-brand").css("color", "black");  	
                     $(".nav-link").css("color", "black");
