done with changes in normal mode

--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
             </div>
             <!--telegram icon on mobile display-->
             <button class="btn d-md-none" type="button" style="background:transparent;">
-                <img src='assets/img/Icon.png' onclick="openSubNav()" alt="" width="35" height="30">
+                <img src='assets/img/chat icon.png' onclick="openSubNav()" alt="" width="30" height="30">
             </button>
         </nav>
         
