--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
             </div>
             <!--telegram icon on mobile display-->
             <button class="btn d-md-none" type="button" style="background:transparent;">
-                <img src='assets/img/Icon.png' onclick="openSubNav()" alt="" width="35" height="30">
+                <img src='assets/img/chat icon.png' onclick="openSubNav()" alt="" width="30" height="30">
             </button>
         </nav>
         
@@ -224,7 +224,7 @@
                           </form>
                     </div>
                     <div class="col-lg-6 pt-3" data-aos="fade-down">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497699.9974145158!2d77.35073152304378!3d12.953847712013593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1608404928594!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15544.307743477919!2d77.5223957!3d13.0943105!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3c9f54632c777fb1!2sUpdot!5e0!3m2!1sen!2sin!4v1608685749043!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
