--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img id="main-logo" src="assets/img/Main Logo.png" width="70" height="40" alt="">
+                <img id="main-logo" src="assets/img/New logo.png" width="100" height="40" alt="">
               </a>
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
@@ -76,22 +76,22 @@
                 <div class="action-overlay-content justify-content-start" style="padding-left:25px;" id="navbarToggler">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item" style="margin-top: 10px;">
-                        <img style=" margin-top:15px;" src="assets/img/pen-icon.svg" alt="" width="24" height="24">
+                        <img style=" margin-top:15px;" src="assets/img/b-pen-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Have a project overview?</p>
                         <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="index.html">Submit a form</a>
                     </li>
                     <li class="nav-item mob-menu">
-                        <img style=" margin-top:13px;" src="assets/img/email-icon.svg" alt="" width="24" height="24">
+                        <img style=" margin-top:13px;" src="assets/img/b-email-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Share detailed specification</p>
                         <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="about.html">updot@gmail.com</a>
                     </li>
                     <li class="nav-item">
-                        <img style=" margin-top:12px;" src="assets/img/call-icon.svg" alt="" width="24" height="24">
+                        <img style=" margin-top:12px;" src="assets/img/b-call-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Begin a quick discussion?</p>
                         <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Chat with our executive</a>
                     </li>
                     <li class="nav-item">
-                        <img style=" margin-top:10px;" src="assets/img/chat-icon.svg" alt="" width="24" height="24">
+                        <img style=" margin-top:10px;" src="assets/img/b-msg-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Wanna join us</p>
                         <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="blog.html">Apply here</a>
                     </li>
@@ -127,7 +127,7 @@
             </div>
             <!--telegram icon on mobile display-->
             <button id="tele-icon" class="btn bg-transparent d-md-none" type="button" style="background:transparent;">
-                <img src='assets/img/Icon.png' onclick="openSubNav()" alt="" width="35" height="30">
+                <img src='assets/img/chat icon.png' onclick="openSubNav()" alt="" width="30" height="30">
             </button>
         </nav>
         
@@ -507,7 +507,7 @@
                 }
                 else{
                     document.getElementById('night-toggle').style.backgroundColor='transparent';
-                    $("#main-logo").attr("src", "assets/img/Main Logo.png");
+                    $("#main-logo").attr("src", "assets/img/New logo.png");
                     $("#mainNav").css("background" , "transparent");
                     $(".navbar-brand").css("color", "black");  	
                     $(".nav-link").css("color", "black");
