--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <!--nightmode toggle icon in mobile-->
                 <button id="night-toggle-mob" class="btn text-right text-white d-lg-none" type="button" onclick="retflag()">
-                    <i onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
+                    <i onclick="aboutFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
                 </button>
                 <!--overlay content start-->
                 <div class="overlay-content d-flex justify-content-start" style="padding-left:25px;" id="navbarToggler">
@@ -444,7 +444,7 @@
                     if(screen.width < 768){
                         //scrolled in darkmode in mobile view
                     // $("#main-logo").attr("src", "assets/img/New logo.png");
-                    $("#mainNav").css("background" , "black");
+                    $("#mainNav").css("background" , "white");
                     $(".navbar-brand").css("color", "black");  	
                     $(".nav-link").css("color", "black");
                     }
